# alice

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.githooks/: pre-commit
.github/: pull_request_template.md
.github/scripts/: docs_lint.py
.github/workflows/: docs-lint.yml
config/: alice.env.example  cozylobe-throttle.yaml  plugins.yaml
configs/: eval_candidates.json  speaking_correctness_seed.jsonl
docs/: README.md
docs/architecture/: README.md
docs/components/: README.md  alice_forge.md  alice_sm.md  alice_speaking.md  alice_thinking.md  alice_watchers.md  forge.md  sm.md  watchers.md
docs/designs/: sm-v3-ttl-distribution.md  stage-b-adk-workflow-sketch.md  stage-b-cutover.md  thinker-watchdog.md  worker-drain-fix.md
docs/refactor/: 00-overview.md  02-speaking-module-layout.md  04-prompts-package.md  05-personae-and-injection.md  06-provider-port.md  07-skills.md  08-alice-core-organization.md  09-spike-pi-coding-agent.md
docs/user/: README.md
firmware/qualia-face-arduino/: .gitignore  README.md  platformio.ini
firmware/qualia-face-arduino/src/: animator.cpp  animator.h  main.cpp  panel_round21.h  sprites.cpp  sprites.h  (+1 more)
sandbox/: Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.override.yml.example  docker-compose.yml  entrypoint.sh  legacy-3svc.yml
sandbox/host-claude-watcher/: README.md  alice-host-claude-watcher.sh  alice-host-claude.service  test-roundtrip.sh
sandbox/litellm/: config.yaml
sandbox/scripts/: install-plugins.sh
sandbox/viewer/: Dockerfile
sandbox/worker/: Dockerfile
scripts/: cozylobe_cortex_lint.py  cozylobe_cortex_onboard.py  install-hooks.sh  lint_markdown.py  normalize_trigger_keywords.py  sm-speaking-perissue.py  sm-thinking-perissue.py
src/alice_core/: sdk_compat.py
src/alice_cozylobe/: __init__.py  __main__.py  activity_fetcher.py  adjacency.py  breach.py  cortex.py  cortex_cli.py  daemon.py  event_log.py  events.py  guesses.py  motion.py  noise_router.py  qwen_client.py  sse_consumer.py  surfaces.py  throttle.py  trajectories.py  wake_loop.py
src/alice_daemon/: gh_state_mirror.py
src/alice_eval/: __init__.py  __main__.py  assertions.py  bench.py  instances.py  pii.py  prompt.py  rating_ui.py  replay.py  sampling.py  score.py
src/alice_forge/: comments.py  gh_state_mirror.py  github_reconciler.py  speaking_shim.py  task_cli.py  task_store.py  thinking_shim.py
src/alice_indexer/: build_index.py  seed_access_counts.py  yaml_lite.py
src/alice_metrics/: __init__.py  vault_health.py
src/alice_pi/: kernel.py  models_staging.py  translator.py
src/alice_skills/: registry.py  render.py  skill.py
src/alice_sm/: __init__.py  comments.py  dispatcher.py  speaking_shim.py  thinking_shim.py
src/alice_speaking/: _dispatch.py  auto_fix.py  daemon.py  factory.py  github.py  runtime.py  turn_runner.py
src/alice_thinking/: STAGE_D_JUDGES.md  __init__.py  _prompt_assembly.py  backoff.py  design_pipeline.py  kernel_adapter.py  phase.py  runtime.py  selector.py  stage_d_invariant.py  stage_d_judges.py  stage_d_pipeline.py  surface_guard.py  vault_lock.py  vault_state.py  wake.py  wake_hooks.py  watchdog.py
src/alice_viewer/: STAGE_D_SCHEMA.md  aggregators.py  bucket_cache.py  chat_client.py  cluster_registry.py  context_probe_client.py  labels.py  lobe_labeler.py  main.py  narrative.py  run_summary.py  settings.py  sources.py  stage_d_store.py
src/alice_watchers/: github.py
src/core/: __init__.py  events.py  llm_client.py  observability_ledger.py
src/cozylobe_cortex/: __init__.py  classify.py
src/eval/: __init__.py  __main__.py  assertions.py  bench.py  build_harness_labels.py  harness_replay.py  instances.py  label_extractor.py  prompt.py  rating_ui.py  replay.py  sampling.py  score.py  seed_builder.py
src/forge/: comments.py  speaking_shim.py  thinking_shim.py
src/indexer/: build_index.py  seed_access_counts.py  yaml_lite.py
src/kernels/: __init__.py
src/metrics/: __init__.py  birth_signal.py  domain_inference.py  pagerank_metric.py  vault_health.py
src/prompts/: __init__.py  cli.py  loader.py
src/skills/: cli.py  registry.py  render.py  skill.py
src/sm/: comments.py  speaking_shim.py  thinking_shim.py
src/viewer/: STAGE_D_SCHEMA.md  aggregators.py  chat_client.py  cluster_registry.py  lobe_labeler.py  main.py  narrative.py  run_summary.py  sources.py  stage_d_store.py
src/watchers/: github.py
templates/cozylobe-cortex/: README.md
templates/mind-scaffold/: CLAUDE.md
tests/: conftest.py  test_a2a_transport.py  test_agent_library.py  test_agent_library_phase3_call_sites.py  test_alice_client_context.py  test_alice_core_isolation.py  test_alice_experiment_cli.py  test_alice_forge_comments.py  test_alice_forge_dispatcher.py  test_alice_forge_dispatcher_multi_repo.py  test_alice_indexer.py  test_alice_pi_models_staging.py  test_art_classifier.py  test_auth.py  test_auto_commit_failures.py  test_auto_fix.py  test_auto_fix_task_wiring.py  test_backend_cli.py  test_background_task_completion.py  test_birth_signal.py  test_cli_context_request.py  test_cluster_registry_llm.py  test_compaction.py  test_context_probe.py  test_core_isolation.py  test_correction_cascade.py  test_correction_cascade_auto_propagate.py  test_cozyhem_subscriber.py  test_cozylobe.py  test_cue_runner.py  test_daemon.py  test_daemon_drain_force_stop.py  test_deploy_tool.py  test_dispatch_background_task_tool.py  test_dispatch_registry.py  test_dispatcher_deferred_state.py  test_domain_inference.py  test_face_caption.py  test_face_presence.py  test_forge_comments.py  (+118 more)
tests/alice_eval/: test_assertions.py  test_bench_integration.py  test_harness_labels.py  test_harness_replay.py  test_instances.py  test_pii.py  test_replay.py  test_sampling.py  test_score.py  test_tool_aware_assertions.py
tests/cozylobe/: test_adjacency.py  test_breach.py  test_classify_from_trail.py  test_cortex_integration.py  test_cortex_phase1.py  test_event_log.py  test_guesses.py  test_motion_pipeline.py  test_noise_router.py  test_parse_yaml_frontmatter.py  test_throttle.py  test_trajectory.py
tui/: README.md
(+363 files in other folders)
