[project]
name = "alice"
version = "0.3.0"
description = "Alice — the machine that runs her: agentic kernel, speaking daemon, thinking wake, observability viewer."
authors = [
    { name = "jcronq", email = "jcronq@gmail.com" }
]
# Viewer needs 3.11 (uses asyncio.timeout in narrative.py + fastapi features).
# Speaking's packages target 3.10+ but python 3.13 in the container covers both.
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

dependencies = [
    # Agent kernel + hemispheres.
    "claude-agent-sdk>=0.1.66",
    "httpx>=0.28.1",
    # Per-transport markdown rendering (alice_speaking.render).
    "mistune>=3.0",
    # Address book / principals.yaml (alice_speaking.principals).
    "pyyaml>=6.0",
    # Discord transport (alice_speaking.transports.discord).
    "discord.py>=2.4",
    # Viewer.
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "sse-starlette>=2.0",
    # A2A protocol server (alice_speaking.transports.a2a). The
    # http-server extra pulls uvicorn + starlette; we reference 1.0+
    # APIs (new_task_from_user_message, AgentInterface,
    # protocol_version="1.0") and ship a workaround for issue #1011
    # specific to 1.0.x — must match the worker Dockerfile pin.
    "a2a-sdk[http-server]>=1.0.2",
    # Stage B workflow runtime (alice_thinking.workflows.stage_b).
    # google-adk's SequentialAgent / ParallelAgent / LiteLlm wrap the
    # workflow shape; litellm pinned explicitly so the local Qwen
    # backend (openai-compatible provider) wires up without touching
    # the kernel layer.
    "google-adk>=1.32",
    "litellm>=1.83",
]

[project.scripts]
alice-viewer = "viewer.main:run"
# Synchronous CLI wrapper around alice_thinking.experiments.ExperimentRunner.
# Exists because pi-mono (the local Qwen runtime that drives thinking's
# sleep wakes) strips mcp__-prefixed tools, so the run_experiment MCP tool
# is invisible to thinking. The CLI is a parallel surface targeting pi-mono;
# the MCP path still serves AnthropicKernel-driven wakes.
alice-experiment = "alice_thinking.cli.experiment:main"
# One-shot State Machine v0 dispatcher — polls jcronq/alice for sm:selected
# issues, trust-filters them, and posts a dispatcher-hello comment. Invoke
# on a cadence (later: s6 supervisor); for now it's manual.
alice-sm = "alice_forge.dispatcher:main"
# One-shot reconciliation: copy access_count from vault frontmatter into
# the cortex-index note_metrics table. Used to bootstrap historical
# counts after wiring the cue runner's DB write path.
alice-seed-access-counts = "indexer.seed_access_counts:main"
# Shell-side debugging wrapper around the request_host_claude MCP tool:
# drop a task spec into /state/worker/host-claude/inbox/ from the CLI
# instead of going through the MCP server. See sandbox/host-claude-watcher/.
alice-host-claude-request = "alice_speaking.tools.host_claude:main"
# Per-issue thinking-agent entrypoint (#163). Invoked by
# alice_forge.dispatcher.spawn_thinking_agent for each (sm:selected, art:code)
# issue — reads <spawn-dir>/prompt.txt, resolves Phase from frontmatter,
# drives the kernel through alice_thinking.runtime.PhaseRunner. The
# scripts/sm-thinking-perissue.py shim is a thin file-path wrapper around
# the same module for repo-root invocations.
alice-sm-thinking-perissue = "alice_thinking.cli.perissue:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Sibling Python packages under src/:
#   core      — agentic kernel (SDK lifecycle + observability + auth)
#   eval      — speaking-quality eval harness (Day-1 sample/replay/UI)
#   indexer   — vault SQLite/FTS5 indexer (CLI; cortex-memory tooling)
#   metrics   — stable vault-health metric implementations (replaces drift-prone bash)
#   kernels.pi      — Kernel impl backed by pi-coding-agent subprocess
#   kernels.anthropic — Kernel impl backed by claude_agent_sdk
#   prompts   — Jinja2 templates the runtime renders into model prompts
#   skills    — registry over .claude/skills/ markdown (plan 07)
#   alice_forge     — State Machine dispatcher for alice_forge (poll → trust-filter → comment)
#   alice_speaking  — Signal daemon (composes kernel with producers/handlers/outbox)
#   alice_thinking  — one-shot wake (python -m alice_thinking)
#   alice_cozylobe  — CozyHem reasoning lobe (push-driven SSE consumer + wake loop)
#   viewer    — FastAPI observability UI (serves /state logs)
#   watchers  — one-shot pollers feeding inner/notes/ (github, …)
[tool.hatch.build.targets.wheel]
packages = [
    "src/core",
    "src/eval",
    "src/indexer",
    "src/metrics",
    "src/kernels",
    "src/prompts",
    "src/skills",
    "src/alice_forge",
    "src/alice_speaking",
    "src/alice_thinking",
    "src/alice_cozylobe",
    "src/viewer",
    "src/watchers",
]

# prompts ships .md.j2 template files alongside its Python
# modules; hatch needs the include-pattern to bundle them in the
# wheel. skills bundles its runtime-default SKILL.md files
# the same way (plan 07 phase 6). alice_thinking ships the
# per-phase prompt fragments under prompts/ — loaded via
# importlib.resources, see alice_thinking.phase.PromptFragmentLoader.
[tool.hatch.build.targets.wheel.force-include]
"src/prompts/templates" = "prompts/templates"
"src/skills/defaults" = "skills/defaults"
"src/kernels/pi/extensions" = "kernels/pi/extensions"
"src/alice_thinking/prompts" = "alice_thinking/prompts"
"src/alice_thinking/workflows/stage_b/prompts" = "alice_thinking/workflows/stage_b/prompts"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.mypy]
# Lenient: don't fail on missing third-party stubs. Tighten later.
ignore_missing_imports = true

[tool.ruff.lint.per-file-ignores]
# The dispatcher sub-package deliberately uses curated star imports
# (handlers/_common.py and main.py both glob the shared symbol
# bundle) as the cohesion pattern for the (state, artifact)
# transition handlers. F403/F405 fire as false positives on this
# idiom; exempt the whole sub-package rather than per-file.
"src/alice_forge/dispatcher/**/*.py" = ["F403", "F405"]
# Phase 4 (#301) moved the v1 ``_process_*`` handlers and the
# ``DispatcherState`` ledger out of ``dispatcher/`` into
# ``sm/legacy/`` for the one-month grace period. Same star-import
# idiom — exempt the legacy sub-package on the same rules so the
# move is a pure relocation (no lint regressions).
"src/alice_forge/sm/legacy/**/*.py" = ["F403", "F405"]
